Compilation errors in jdk.crypto.mscapi with VS 2017

XMLWordPrintable

    • b04
    • Not verified

        With the VS 2017 tool chain the following errors occur:

        jib > t:/workspace/open/src/jdk.crypto.mscapi/windows/native/libsunmscapi/security.cpp(95): error C2323: 'operator new[]': non-member operator new or delete functions may not be declared static or in a namespace other than the global namespace

        jib > t:/workspace/open/src/jdk.crypto.mscapi/windows/native/libsunmscapi/security.cpp(1555): warning C4311: 'type cast': pointer truncation from 'BYTE *' to 'DWORD'
        jib > t:/workspace/open/src/jdk.crypto.mscapi/windows/native/libsunmscapi/security.cpp(1555): warning C4302: 'type cast': truncation from 'BYTE *' to 'DWORD'

              Assignee:
              Weijun Wang
              Reporter:
              Roger Riggs
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: