8198898: Compilation errors in jdk.crypto.mscapi with VS 2017

Reviewed-by: xuelei